Bug 1304966 - Enable Storage API only for nightly bulid, r=baku, a=gchang

--HG--
extra : source : 6817b7629eeafb0b66a9976f13f7d2ef892a7e47