dom/webidl/Navigator.webidl
@@ -88,6 +88,7 @@ interface NavigatorContentUtils {
 
 [NoInterfaceObject, Exposed=(Window,Worker)]
 interface NavigatorStorage {
+  [Func="mozilla::dom::StorageManager::PrefEnabled"]
   readonly attribute StorageManager storage;
 };
 
